ultimos detalles en el json para crear usuario desde la aplicacion  antes de enlazarlo con la api

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,13 @@
 
 </head>
 
-<body>
-    <app-root></app-root>
+<body class="nav-md">
+
+    <div class="container body">
+        <div class="main_container">
+            <app-root></app-root>
+        </div>
+    </div>
 
     <!-- jQuery -->
     <script src="assets/vendors/jquery/dist/jquery.min.js"></script>
